--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 -->
         </style>
 </head>
+	
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?5eb902a8e8954df397a318ad5c6e381e";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+	
     <body>
 			<audio autoplay="autopaly">
 					<source src="https://music.163.com/#/song?id=537854958" type="audio/mp3" />
