--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Rui&Klily-Story</title>
+		<title>Qiang&Jun-Story</title>
 	    
         <link type="text/css" rel="stylesheet" href="./index_files/default.css">
 		<script type="text/javascript" src="./index_files/jquery.min.js"></script>
@@ -60,13 +60,13 @@ var _hmt = _hmt || [];
                         <span class="say"> </span><br>
                         <span class="say">// You are my only girl..永远..</span><br>
 						<span class="say"> </span><br>
-						<span class="say">// 感谢欣赏。   <!--<a href="">点击访问更多</a>--></span><br>
+						<!--<span class="say">// 感谢欣赏。   <a href="">点击访问更多</a>--></span><br>
 						<span class="say"> </span><br>
-                        <span class="say"><span class="space"></span> -- Rui--</span>
+                        <span class="say"><span class="space"></span> -- Qiang--</span>
 			        </div>
                 </div>
                 <div id="clock-box">
-                    Rui<span class="STYLE1">与</span> Klily<span class="STYLE1">已经相识了</span>
+                    Qiang<span class="STYLE1">与</span> Jun<span class="STYLE1">已经相识了</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
